other minor fixes